Qualtrics Survey Xblock
  Author fields in Studio:
   - Display Name
   - Survey ID
   - Your University
   - Link Text
   - Parameter Name for UserID

  If Parameter Name is left blank, the anonymous student id is
  ommitted from the url.

  Links to an already existing Qualtrics survey.

--- a/qualtricssurvey/public/view.html
+++ b/qualtricssurvey/public/view.html
@@ -1,1 +1,1 @@
-<div class="qualtricssurvey_block"><h2>{self.name}</h2></div>
+<div class="qualtricssurvey_block"><p>The survey will open in a new browser tab or window.</p><p><a href="https://{your_university}.qualtrics.com/SE/?SID={survey_id}{user_id_string}" target="_blank">{link_text}</a></p></div>
