--- a/qualtricssurvey/private/edit.html
+++ b/qualtricssurvey/private/edit.html
@@ -1,6 +1,5 @@
 <div class="wrapper-comp-settings is-active editor-with-buttons qualtricssurvey_edit" id="settings-tab">
   <ul class="list-input settings-list">
-      <!-- TODO: Add an entry here for each field -->
       <li class="field comp-setting-entry is-set">
           <div class="wrapper-comp-setting">
               <label
@@ -120,9 +119,9 @@
       </li>
       
       <li class="field comp-setting-entry is-set">
-          <a href="#" id="display-source">View Source</a>
-          <div id="content-source" style="display: none;">
-              <textarea disabled="disabled" contenteditable="false" style="width: 100%; height: 200px;">
+          <a href="#" class="xblock_qualtricssurvey_display-source">View Source</a>
+          <div class="content-source-div">
+              <textarea disabled="disabled" contenteditable="false" class="content-source-textarea">
                   {source_content}
               </textarea>
           </div>
