A few more comments addressed.

--- a/qualtricssurvey/private/edit.html
+++ b/qualtricssurvey/private/edit.html
@@ -36,6 +36,7 @@
                 class="input setting-input"
                 id="xblock_qualtricssurvey_survey_id"
                 value="{self.survey_id}"
+                placeholder="Enter your survey ID here."
                 type="text"
                 tabindex="2"
             >
